# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
page_loader/: __init__.py  cli.py  exceptions.py  loader.py  logger.py  page_processor.py  request.py  storage.py  utils.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: expected_web_page.html  web_page.html
tests/fixtures/assets/: runtime.js
