[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "Web page downloader"
authors = ["Sergey Sakirko <ssakirko@mail.ru>"]

packages = [
    { include = "page_loader" }
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
requests-mock = "^1.8.0"
flake8 = "^3.8.4"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
